@@ -1,6 +1,7 @@
 package no.sikt.nva.brage.migration.testutils;
 
 import static java.util.Objects.nonNull;
+
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -70,7 +71,6 @@ import no.unit.nva.model.instancetypes.event.ConferencePoster;
 import no.unit.nva.model.instancetypes.event.Lecture;
 import no.unit.nva.model.instancetypes.event.OtherPresentation;
 import no.unit.nva.model.instancetypes.journal.AcademicArticle;
-import no.unit.nva.model.instancetypes.journal.FeatureArticle;
 import no.unit.nva.model.instancetypes.journal.JournalArticle;
 import no.unit.nva.model.instancetypes.journal.JournalIssue;
 import no.unit.nva.model.instancetypes.journal.JournalLeader;
@@ -96,514 +96,605 @@ import org.joda.time.DateTime;
 
 public final class ReferenceGenerator {
 
-    public static final String CURRENT_YEAR = String.valueOf(DateTime.now().getYear());
+  public static final String CURRENT_YEAR = String.valueOf(DateTime.now().getYear());
 
-    public static Reference generateReference(Builder builder) {
-        return Optional.ofNullable(builder).map(ReferenceGenerator::buildReference).orElse(new Reference());
-    }
+  public static Reference generateReference(Builder builder) {
+    return Optional.ofNullable(builder)
+        .map(ReferenceGenerator::buildReference)
+        .orElse(new Reference());
+  }
 
-    private static Reference buildReference(Builder builder) {
-        try {
-            if (NvaType.BOOK.getValue().equals(builder.getType().getNva()) && !hasEditor(builder)) {
-                return new Reference.Builder().withPublishingContext(generatePublicationContextForBook(builder))
-                           .withPublicationInstance(generatePublicationInstanceForBook(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.BOOK.getValue().equals(builder.getType().getNva()) && hasEditor(builder)) {
-                return new Reference.Builder().withPublishingContext(generatePublicationContextForBook(builder))
-                           .withPublicationInstance(generateBookAnthology(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.BOOK_OF_ABSTRACTS.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generatePublicationContextForReport(builder))
-                           .withPublicationInstance(generatePublicationInstanceForReportBookOfAbstracts(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.MAP.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new Map(builder.getDescriptionsForPublication(), builder.getMonographPages()))
-                           .withPublishingContext(new GeographicalContent(generatePublisher(builder)))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.DATASET.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(getPublicationInstanceForDataset(builder))
-                           .withPublishingContext(new ResearchData(generatePublisher(builder)))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.REPORT.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(generatePublicationInstanceForReport(builder))
-                           .withPublishingContext(generatePublicationContextForReport(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.RESEARCH_REPORT.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        generatePublicationInstanceForResearchReport(builder))
-                           .withPublishingContext(generatePublicationContextForReport(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.WORKING_PAPER.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        generatePublicationInstanceForReportWorkingPaper(builder))
-                           .withPublishingContext(generatePublicationContextForReport(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.BACHELOR_THESIS.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generatePublicationContextForDegree(builder))
-                           .withPublicationInstance(generatePublicationInstanceForBachelorDegree(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.MASTER_THESIS.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generatePublicationContextForDegree(builder))
-                           .withPublicationInstance(generatePublicationInstanceForMasterDegree(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.DOCTORAL_THESIS.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generatePublicationContextForDegree(builder))
-                           .withPublicationInstance(generatePublicationInstanceForPhd(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.JOURNAL_ARTICLE.getValue().equals(builder.getType().getNva()) && hasJournalId(builder)) {
-                return new Reference.Builder().withPublishingContext(generateJournal(builder))
-                           .withPublicationInstance(generatePublicationInstanceForJournalArticle(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.MEDIA_FEATURE_ARTICLE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generateJournal(builder))
-                           .withPublicationInstance(generatePublicationInstanceForFeatureArticle(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.JOURNAL_ARTICLE.getValue().equals(builder.getType().getNva()) && !hasJournalId(builder)) {
-                return new Reference.Builder().withPublishingContext(generateUnconfirmedJournal(builder))
-                           .withPublicationInstance(generatePublicationInstanceForJournalArticle(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.SCIENTIFIC_ARTICLE.getValue().equals(builder.getType().getNva()) && hasJournalId(builder)) {
-                return new Reference.Builder().withPublishingContext(generateJournal(builder))
-                           .withPublicationInstance(generatePublicationInstanceForScientificArticle(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.STUDENT_PAPER_OTHERS.getValue().equals(builder.getType().getNva())
-                || NvaType.STUDENT_PAPER.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(
-                        generatePublicationContextForOtherStudentWork(builder))
-                           .withPublicationInstance(generatePublicationInstanceForStudentPaper(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.SCIENTIFIC_MONOGRAPH.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generatePublicationContextForBook(builder))
-                           .withPublicationInstance(generatePublicationInstanceForScientificMonograph(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.LECTURE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generateEvent(builder))
-                           .withPublicationInstance(new Lecture())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.CHAPTER.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(new Anthology())
-                           .withPublicationInstance(generatePublicationInstanceForChapter(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.SCIENTIFIC_CHAPTER.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(new Anthology())
-                           .withPublicationInstance(generatePublicationInstanceForScientificChapter(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.SCIENTIFIC_ARTICLE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(new Anthology())
-                           .withPublicationInstance(generatePublicationInstanceForScientificArticle(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.DESIGN_PRODUCT.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(new Artistic())
-                           .withPublicationInstance(generatePublicationInstanceForDesignProduct())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.RECORDING_MUSICAL.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(new Artistic())
-                           .withPublicationInstance(new MusicPerformance(Collections.emptyList(),
-                                                                         NullDuration.create()))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.PLAN_OR_BLUEPRINT.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(new Artistic())
-                           .withPublicationInstance(generatePublicationInstanceForArchitecture())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.CONFERENCE_POSTER.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generateEvent(builder))
-                           .withPublicationInstance(generatePublicationInstanceForConferencePoster())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.INTERVIEW.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(
-                    new MediaContribution.Builder().withFormat(MediaFormat.TEXT)
-                        .withMedium(MediaSubType.create(MediaSubTypeEnum.OTHER))
-                        .build()).withPublicationInstance(new MediaInterview()).withDoi(builder.getDoi()).build();
-            }
-            if (NvaType.PRESENTATION_OTHER.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublishingContext(generateEvent(builder))
-                           .withPublicationInstance(new OtherPresentation())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.CONFERENCE_REPORT.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new ConferenceReport(builder.getMonographPages()))
-                           .withPublishingContext(generatePublicationContextForReport(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.PROFESSIONAL_ARTICLE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new ProfessionalArticle(generateRange(builder), null, null, null))
-                           .withPublishingContext(generateJournal(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.PERFORMING_ARTS.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new PerformingArts(PerformingArtsSubtype.createOther(null), null, Collections.emptyList()))
-                           .withPublishingContext(new Artistic())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.VISUAL_ARTS.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new VisualArts(VisualArtsSubtype.createOther(null), null, Collections.emptySet()))
-                           .withPublishingContext(new Artistic())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.READER_OPINION.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new MediaReaderOpinion(null, null, null, generateRange(builder)))
-                           .withPublishingContext(new UnconfirmedMediaContributionPeriodical(null, null, null))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.ANTHOLOGY.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(generateBookAnthology(builder))
-                           .withPublishingContext(generatePublicationContextForBook(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.TEXTBOOK.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(new Textbook(generateMonographPages(builder)))
-                           .withPublishingContext(generatePublicationContextForBook(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.FILM.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new MovingPicture(MovingPictureSubtype.createOther(null),
-                                          null, Collections.emptyList(), NullDuration.create()))
-                           .withPublishingContext(new Artistic())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.LITERARY_ARTS.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                    new LiteraryArts(LiteraryArtsSubtypeOther.createOther(null), Collections.emptyList(), null))
-                           .withPublishingContext(new Artistic())
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.EXHIBITION_CATALOGUE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new ExhibitionCatalog(generateMonographPages(builder)))
-                           .withPublishingContext(generatePublicationContextForBook(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.POPULAR_SCIENCE_MONOGRAPH.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(
-                        new PopularScienceMonograph(generateMonographPages(builder)))
-                           .withPublishingContext(generatePublicationContextForBook(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.EDITORIAL.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder()
-                           .withPublicationInstance(new JournalLeader(builder.getVolume(), builder.getIssue(),
-                                                                      builder.getArticleNumber(),
-                                                                      generateRange(builder)))
-                           .withPublishingContext(new UnconfirmedJournal(builder.getJournalTitle(),
-                                                                         builder.getIssnList().get(0),
-                                                                         builder.getIssnList().get(1)))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.JOURNAL_ISSUE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder()
-                           .withPublicationInstance(new JournalIssue(builder.getVolume(),
-                                                                     builder.getIssue(),
-                                                                     builder.getArticleNumber(),
-                                                                     generateRange(builder)))
-                           .withPublishingContext(new UnconfirmedJournal(builder.getJournalTitle(),
-                                                                         builder.getIssnList().get(0),
-                                                                         builder.getIssnList().get(1)))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.CONFERENCE_LECTURE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder()
-                           .withPublicationInstance(new ConferenceLecture())
-                           .withPublishingContext(generateEvent(builder))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.POPULAR_SCIENCE_ARTICLE.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder()
-                           .withPublicationInstance(new PopularScienceArticle(generateRange(builder), builder.getVolume(), null,
-                                                                              null))
-                           .withPublishingContext(new UnconfirmedJournal(builder.getJournalTitle(),
-                                                                         builder.getIssnList().get(0),
-                                                                         builder.getIssnList().get(1)))
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            if (NvaType.CRISTIN_RECORD.getValue().equals(builder.getType().getNva())) {
-                return new Reference.Builder().withPublicationInstance(null)
-                           .withPublishingContext(null)
-                           .withDoi(builder.getDoi())
-                           .build();
-            }
-            return new Reference.Builder().build();
-        } catch (Exception e) {
-            return new Reference.Builder().build();
-        }
+  private static Reference buildReference(Builder builder) {
+    try {
+      if (NvaType.BOOK.getValue().equals(builder.getType().getNva()) && !hasEditor(builder)) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForBook(builder))
+            .withPublicationInstance(generatePublicationInstanceForBook(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.BOOK.getValue().equals(builder.getType().getNva()) && hasEditor(builder)) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForBook(builder))
+            .withPublicationInstance(generateBookAnthology(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.BOOK_OF_ABSTRACTS.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForReport(builder))
+            .withPublicationInstance(generatePublicationInstanceForReportBookOfAbstracts(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.MAP.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new Map(builder.getDescriptionsForPublication(), builder.getMonographPages()))
+            .withPublishingContext(new GeographicalContent(generatePublisher(builder)))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.DATASET.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(getPublicationInstanceForDataset(builder))
+            .withPublishingContext(new ResearchData(generatePublisher(builder)))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.REPORT.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(generatePublicationInstanceForReport(builder))
+            .withPublishingContext(generatePublicationContextForReport(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.RESEARCH_REPORT.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(generatePublicationInstanceForResearchReport(builder))
+            .withPublishingContext(generatePublicationContextForReport(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.WORKING_PAPER.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(generatePublicationInstanceForReportWorkingPaper(builder))
+            .withPublishingContext(generatePublicationContextForReport(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.BACHELOR_THESIS.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForDegree(builder))
+            .withPublicationInstance(generatePublicationInstanceForBachelorDegree(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.MASTER_THESIS.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForDegree(builder))
+            .withPublicationInstance(generatePublicationInstanceForMasterDegree(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.DOCTORAL_THESIS.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForDegree(builder))
+            .withPublicationInstance(generatePublicationInstanceForPhd(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.JOURNAL_ARTICLE.getValue().equals(builder.getType().getNva())
+          && hasJournalId(builder)) {
+        return new Reference.Builder()
+            .withPublishingContext(generateJournal(builder))
+            .withPublicationInstance(generatePublicationInstanceForJournalArticle(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.MEDIA_FEATURE_ARTICLE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generateJournal(builder))
+            .withPublicationInstance(generatePublicationInstanceForFeatureArticle(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.JOURNAL_ARTICLE.getValue().equals(builder.getType().getNva())
+          && !hasJournalId(builder)) {
+        return new Reference.Builder()
+            .withPublishingContext(generateUnconfirmedJournal(builder))
+            .withPublicationInstance(generatePublicationInstanceForJournalArticle(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.SCIENTIFIC_ARTICLE.getValue().equals(builder.getType().getNva())
+          && hasJournalId(builder)) {
+        return new Reference.Builder()
+            .withPublishingContext(generateJournal(builder))
+            .withPublicationInstance(generatePublicationInstanceForScientificArticle(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.STUDENT_PAPER_OTHERS.getValue().equals(builder.getType().getNva())
+          || NvaType.STUDENT_PAPER.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForOtherStudentWork(builder))
+            .withPublicationInstance(generatePublicationInstanceForStudentPaper(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.SCIENTIFIC_MONOGRAPH.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generatePublicationContextForBook(builder))
+            .withPublicationInstance(generatePublicationInstanceForScientificMonograph(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.LECTURE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generateEvent(builder))
+            .withPublicationInstance(new Lecture())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.CHAPTER.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(new Anthology())
+            .withPublicationInstance(generatePublicationInstanceForChapter(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.SCIENTIFIC_CHAPTER.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(new Anthology())
+            .withPublicationInstance(generatePublicationInstanceForScientificChapter(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.SCIENTIFIC_ARTICLE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(new Anthology())
+            .withPublicationInstance(generatePublicationInstanceForScientificArticle(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.DESIGN_PRODUCT.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(new Artistic())
+            .withPublicationInstance(generatePublicationInstanceForDesignProduct())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.RECORDING_MUSICAL.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(new Artistic())
+            .withPublicationInstance(
+                new MusicPerformance(Collections.emptyList(), NullDuration.create()))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.PLAN_OR_BLUEPRINT.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(new Artistic())
+            .withPublicationInstance(generatePublicationInstanceForArchitecture())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.CONFERENCE_POSTER.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generateEvent(builder))
+            .withPublicationInstance(generatePublicationInstanceForConferencePoster())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.INTERVIEW.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(
+                new MediaContribution.Builder()
+                    .withFormat(MediaFormat.TEXT)
+                    .withMedium(MediaSubType.create(MediaSubTypeEnum.OTHER))
+                    .build())
+            .withPublicationInstance(new MediaInterview())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.PRESENTATION_OTHER.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublishingContext(generateEvent(builder))
+            .withPublicationInstance(new OtherPresentation())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.CONFERENCE_REPORT.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(new ConferenceReport(builder.getMonographPages()))
+            .withPublishingContext(generatePublicationContextForReport(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.PROFESSIONAL_ARTICLE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new ProfessionalArticle(generateRange(builder), null, null, null))
+            .withPublishingContext(generateJournal(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.PERFORMING_ARTS.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new PerformingArts(
+                    PerformingArtsSubtype.createOther(null), null, Collections.emptyList()))
+            .withPublishingContext(new Artistic())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.VISUAL_ARTS.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new VisualArts(VisualArtsSubtype.createOther(null), null, Collections.emptySet()))
+            .withPublishingContext(new Artistic())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.READER_OPINION.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new MediaReaderOpinion(null, null, null, generateRange(builder)))
+            .withPublishingContext(new UnconfirmedMediaContributionPeriodical(null, null, null))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.ANTHOLOGY.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(generateBookAnthology(builder))
+            .withPublishingContext(generatePublicationContextForBook(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.TEXTBOOK.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(new Textbook(generateMonographPages(builder)))
+            .withPublishingContext(generatePublicationContextForBook(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.FILM.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new MovingPicture(
+                    MovingPictureSubtype.createOther(null),
+                    null,
+                    Collections.emptyList(),
+                    NullDuration.create()))
+            .withPublishingContext(new Artistic())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.LITERARY_ARTS.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new LiteraryArts(
+                    LiteraryArtsSubtypeOther.createOther(null), Collections.emptyList(), null))
+            .withPublishingContext(new Artistic())
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.EXHIBITION_CATALOGUE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(new ExhibitionCatalog(generateMonographPages(builder)))
+            .withPublishingContext(generatePublicationContextForBook(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.POPULAR_SCIENCE_MONOGRAPH.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(new PopularScienceMonograph(generateMonographPages(builder)))
+            .withPublishingContext(generatePublicationContextForBook(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.EDITORIAL.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new JournalLeader(
+                    builder.getVolume(),
+                    builder.getIssue(),
+                    builder.getArticleNumber(),
+                    generateRange(builder)))
+            .withPublishingContext(
+                new UnconfirmedJournal(
+                    builder.getJournalTitle(),
+                    builder.getIssnList().get(0),
+                    builder.getIssnList().get(1)))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.JOURNAL_ISSUE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new JournalIssue(
+                    builder.getVolume(),
+                    builder.getIssue(),
+                    builder.getArticleNumber(),
+                    generateRange(builder)))
+            .withPublishingContext(
+                new UnconfirmedJournal(
+                    builder.getJournalTitle(),
+                    builder.getIssnList().get(0),
+                    builder.getIssnList().get(1)))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.CONFERENCE_LECTURE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(new ConferenceLecture())
+            .withPublishingContext(generateEvent(builder))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.POPULAR_SCIENCE_ARTICLE.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(
+                new PopularScienceArticle(generateRange(builder), builder.getVolume(), null, null))
+            .withPublishingContext(
+                new UnconfirmedJournal(
+                    builder.getJournalTitle(),
+                    builder.getIssnList().get(0),
+                    builder.getIssnList().get(1)))
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      if (NvaType.CRISTIN_RECORD.getValue().equals(builder.getType().getNva())) {
+        return new Reference.Builder()
+            .withPublicationInstance(null)
+            .withPublishingContext(null)
+            .withDoi(builder.getDoi())
+            .build();
+      }
+      return new Reference.Builder().build();
+    } catch (Exception e) {
+      return new Reference.Builder().build();
     }
+  }
 
-    private static Event generateEvent(Builder builder) {
-        return new Event.Builder()
-                   .withName(builder.getMainTitle())
-                   .withAgent(Organization.fromUri(builder.getResourceOwner().getOwnerAffiliation()))
-                   .build();
-    }
+  private static Event generateEvent(Builder builder) {
+    return new Event.Builder()
+        .withName(builder.getMainTitle())
+        .withAgent(Organization.fromUri(builder.getResourceOwner().getOwnerAffiliation()))
+        .build();
+  }
 
-    private static BookAnthology generateBookAnthology(Builder builder) {
-        return new BookAnthology(builder.getMonographPages());
-    }
+  private static BookAnthology generateBookAnthology(Builder builder) {
+    return new BookAnthology(builder.getMonographPages());
+  }
 
-    private static boolean hasEditor(Builder builder) {
-        return builder.getContributor().getRole().equals(Role.EDITOR.getValue());
-    }
+  private static boolean hasEditor(Builder builder) {
+    return builder.getContributor().getRole().equals(Role.EDITOR.getValue());
+  }
 
-    private static PublicationInstance<? extends Pages> generatePublicationInstanceForReportBookOfAbstracts(
-        Builder builder) {
-        return new ReportBookOfAbstract(generateMonographPages(builder));
-    }
+  private static PublicationInstance<? extends Pages>
+      generatePublicationInstanceForReportBookOfAbstracts(Builder builder) {
+    return new ReportBookOfAbstract(generateMonographPages(builder));
+  }
 
-    private static MonographPages generateMonographPages(Builder builder) {
-        return new MonographPages.Builder().withPages(builder.getPages().getPages()).withIllustrated(false).build();
-    }
+  private static MonographPages generateMonographPages(Builder builder) {
+    return new MonographPages.Builder()
+        .withPages(builder.getPages().getPages())
+        .withIllustrated(false)
+        .build();
+  }
 
-    private static ConferencePoster generatePublicationInstanceForConferencePoster() {
-        return new ConferencePoster();
-    }
+  private static ConferencePoster generatePublicationInstanceForConferencePoster() {
+    return new ConferencePoster();
+  }
 
-    private static OtherStudentWork generatePublicationInstanceForStudentPaper(Builder builder) {
-        return new OtherStudentWork(builder.getMonographPages(), builder.getPublicationDateForPublication());
-    }
+  private static OtherStudentWork generatePublicationInstanceForStudentPaper(Builder builder) {
+    return new OtherStudentWork(
+        builder.getMonographPages(), builder.getPublicationDateForPublication());
+  }
 
-    private static PublicationInstance<? extends Pages> generatePublicationInstanceForScientificChapter(
-        Builder builder) {
-        return new AcademicChapter(generateRange(builder));
-    }
+  private static PublicationInstance<? extends Pages>
+      generatePublicationInstanceForScientificChapter(Builder builder) {
+    return new AcademicChapter(generateRange(builder));
+  }
 
-    private static PublicationInstance<? extends Pages> generatePublicationInstanceForChapter(Builder builder) {
-        return new NonFictionChapter(generateRange(builder));
-    }
+  private static PublicationInstance<? extends Pages> generatePublicationInstanceForChapter(
+      Builder builder) {
+    return new NonFictionChapter(generateRange(builder));
+  }
 
-    private static ArtisticDesign generatePublicationInstanceForDesignProduct() {
-        return new ArtisticDesign(ArtisticDesignSubtype.createOther(null), null, Collections.emptyList());
-    }
+  private static ArtisticDesign generatePublicationInstanceForDesignProduct() {
+    return new ArtisticDesign(
+        ArtisticDesignSubtype.createOther(null), null, Collections.emptyList());
+  }
 
-    private static Architecture generatePublicationInstanceForArchitecture() {
-        return new Architecture(ArchitectureSubtype.createOther(null), null, Collections.emptyList());
-    }
+  private static Architecture generatePublicationInstanceForArchitecture() {
+    return new Architecture(ArchitectureSubtype.createOther(null), null, Collections.emptyList());
+  }
 
-    private static PublicationInstance<? extends Pages> generatePublicationInstanceForFeatureArticle(Builder builder) {
-        return new MediaFeatureArticle(builder.getVolume(), builder.getIssue(), builder.getArticleNumber(), generateRange(builder));
-    }
+  private static PublicationInstance<? extends Pages> generatePublicationInstanceForFeatureArticle(
+      Builder builder) {
+    return new MediaFeatureArticle(
+        builder.getVolume(),
+        builder.getIssue(),
+        builder.getArticleNumber(),
+        generateRange(builder));
+  }
 
-    private static Range generateRange(Builder builder) {
-        return new Range(builder.getPages().getRange().getBegin(), builder.getPages().getRange().getEnd());
-    }
+  private static Range generateRange(Builder builder) {
+    return new Range(
+        builder.getPages().getRange().getBegin(), builder.getPages().getRange().getEnd());
+  }
 
-    private static PublicationInstance<? extends Pages> generatePublicationInstanceForReportWorkingPaper(
-        Builder builder) {
-        return new ReportWorkingPaper(builder.getMonographPages());
-    }
+  private static PublicationInstance<? extends Pages>
+      generatePublicationInstanceForReportWorkingPaper(Builder builder) {
+    return new ReportWorkingPaper(builder.getMonographPages());
+  }
 
-    private static PublicationInstance<? extends Pages> generatePublicationInstanceForScientificArticle(
-        Builder builder) {
-        return new AcademicArticle(generateRange(builder), null, null, null);
-    }
+  private static PublicationInstance<? extends Pages>
+      generatePublicationInstanceForScientificArticle(Builder builder) {
+    return new AcademicArticle(generateRange(builder), null, null, null);
+  }
 
-    private static PublicationContext generateUnconfirmedJournal(Builder builder) throws InvalidIssnException {
-        if (builder.getIssnList().size() > 1) {
-            return new UnconfirmedJournal(builder.getPublication().getJournal(), builder.getIssnList().get(0),
-                                          builder.getIssnList().get(1));
-        }
-        if (builder.getIssnList().size() == 1) {
-            return new UnconfirmedJournal(builder.getPublication().getJournal(),
-                                          builder.getIssnList().getFirst(),
-                                          null);
-        } else {
-            return new UnconfirmedJournal(builder.getPublication().getJournal(), null, null);
-        }
+  private static PublicationContext generateUnconfirmedJournal(Builder builder)
+      throws InvalidIssnException {
+    if (builder.getIssnList().size() > 1) {
+      return new UnconfirmedJournal(
+          builder.getPublication().getJournal(),
+          builder.getIssnList().get(0),
+          builder.getIssnList().get(1));
     }
+    if (builder.getIssnList().size() == 1) {
+      return new UnconfirmedJournal(
+          builder.getPublication().getJournal(), builder.getIssnList().getFirst(), null);
+    } else {
+      return new UnconfirmedJournal(builder.getPublication().getJournal(), null, null);
+    }
+  }
 
-    private static boolean hasJournalId(Builder builder) {
-        return nonNull(builder.getPublication().getPublicationContext().getJournal().getPid());
-    }
+  private static boolean hasJournalId(Builder builder) {
+    return nonNull(builder.getPublication().getPublicationContext().getJournal().getPid());
+  }
 
-    private static PublicationContext generatePublicationContextForReport(Builder builder)
-        throws InvalidIssnException, InvalidUnconfirmedSeriesException {
-        return new Report.Builder().withIsbnList(Collections.singletonList(builder.getIsbn()))
-                   .withSeries(generateSeries(builder))
-                   .withSeriesNumber(builder.getSeriesNumberPublication())
-                   .build();
-    }
+  private static PublicationContext generatePublicationContextForReport(Builder builder)
+      throws InvalidIssnException, InvalidUnconfirmedSeriesException {
+    return new Report.Builder()
+        .withIsbnList(Collections.singletonList(builder.getIsbn()))
+        .withSeries(generateSeries(builder))
+        .withSeriesNumber(builder.getSeriesNumberPublication())
+        .build();
+  }
 
-    private static BookMonograph generatePublicationInstanceForScientificMonograph(Builder builder) {
-        return new AcademicMonograph(builder.getMonographPages());
-    }
+  private static BookMonograph generatePublicationInstanceForScientificMonograph(Builder builder) {
+    return new AcademicMonograph(builder.getMonographPages());
+  }
 
-    private static PublicationContext generatePublicationContextForOtherStudentWork(Builder builder)
-        throws InvalidIssnException {
-        return new Book.BookBuilder()
-                   .withSeries(generateSeries(builder))
-                   .withIsbnList(Collections.singletonList(builder.getIsbn()))
-                   .build();
-    }
+  private static PublicationContext generatePublicationContextForOtherStudentWork(Builder builder)
+      throws InvalidIssnException {
+    return new Book.BookBuilder()
+        .withSeries(generateSeries(builder))
+        .withIsbnList(Collections.singletonList(builder.getIsbn()))
+        .build();
+  }
 
-    private static JournalArticle generatePublicationInstanceForJournalArticle(Builder builder) {
-        return new ProfessionalArticle(generateRange(builder), null, null, null);
-    }
+  private static JournalArticle generatePublicationInstanceForJournalArticle(Builder builder) {
+    return new ProfessionalArticle(generateRange(builder), null, null, null);
+  }
 
-    private static Publisher generatePublisher(Builder builder) {
-        return new Publisher(UriWrapper.fromUri(PublicationContextMapper.CHANNEL_REGISTRY_V_2)
-                                 .addChild(ChannelType.PUBLISHER.getType())
-                                 .addChild(builder.getPublisherId())
-                                 .addChild(nonNull(getYear(builder)) ? getYear(builder) : CURRENT_YEAR)
-                                 .getUri());
-    }
+  private static Publisher generatePublisher(Builder builder) {
+    return new Publisher(
+        UriWrapper.fromUri(PublicationContextMapper.CHANNEL_REGISTRY_V_2)
+            .addChild(ChannelType.PUBLISHER.getType())
+            .addChild(builder.getPublisherId())
+            .addChild(nonNull(getYear(builder)) ? getYear(builder) : CURRENT_YEAR)
+            .getUri());
+  }
 
-    private static String getYear(Builder builder) {
-        return builder.getPublicationDate().getNva().getYear();
-    }
+  private static String getYear(Builder builder) {
+    return builder.getPublicationDate().getNva().getYear();
+  }
 
-    private static BookSeries generateSeries(Builder builder) throws InvalidIssnException {
-        if (nonNull(builder.getSeriesId())) {
-            return new Series(UriWrapper.fromUri(PublicationContextMapper.CHANNEL_REGISTRY_V_2)
-                                  .addChild(ChannelType.SERIAL_PUBLICATION.getType())
-                                  .addChild(builder.getSeriesId())
-                                  .addChild(nonNull(getYear(builder)) ? getYear(builder) : CURRENT_YEAR)
-                                  .getUri());
-        } else {
-            return new UnconfirmedSeries(builder.getSeriesTitle(),
-                                         builder.getIssnList().getFirst(),
-                                         builder.getIssnList().getLast());
-        }
+  private static BookSeries generateSeries(Builder builder) throws InvalidIssnException {
+    if (nonNull(builder.getSeriesId())) {
+      return new Series(
+          UriWrapper.fromUri(PublicationContextMapper.CHANNEL_REGISTRY_V_2)
+              .addChild(ChannelType.SERIAL_PUBLICATION.getType())
+              .addChild(builder.getSeriesId())
+              .addChild(nonNull(getYear(builder)) ? getYear(builder) : CURRENT_YEAR)
+              .getUri());
+    } else {
+      return new UnconfirmedSeries(
+          builder.getSeriesTitle(),
+          builder.getIssnList().getFirst(),
+          builder.getIssnList().getLast());
     }
+  }
 
-    private static PublicationContext generateJournal(Builder builder) throws InvalidIssnException {
-        if (nonNull(builder.getJournalId())) {
-            return createJournal(builder);
-        } else {
-            return generateUnconfirmedJournal(builder);
-        }
+  private static PublicationContext generateJournal(Builder builder) throws InvalidIssnException {
+    if (nonNull(builder.getJournalId())) {
+      return createJournal(builder);
+    } else {
+      return generateUnconfirmedJournal(builder);
     }
+  }
 
-    private static PublicationContext createJournal(Builder builder) {
-        return new Journal(UriWrapper.fromUri(PublicationContextMapper.CHANNEL_REGISTRY_V_2)
-                               .addChild(ChannelType.SERIAL_PUBLICATION.getType())
-                               .addChild(builder.getJournalId())
-                               .addChild(nonNull(getYear(builder)) ? getYear(builder) : CURRENT_YEAR)
-                               .getUri());
-    }
+  private static PublicationContext createJournal(Builder builder) {
+    return new Journal(
+        UriWrapper.fromUri(PublicationContextMapper.CHANNEL_REGISTRY_V_2)
+            .addChild(ChannelType.SERIAL_PUBLICATION.getType())
+            .addChild(builder.getJournalId())
+            .addChild(nonNull(getYear(builder)) ? getYear(builder) : CURRENT_YEAR)
+            .getUri());
+  }
 
-    private static DataSet getPublicationInstanceForDataset(Builder builder) {
-        return new DataSet(false, new GeographicalDescription(String.join(", ", builder.getSpatialCoverage())), null,
-                           null, null);
-    }
+  private static DataSet getPublicationInstanceForDataset(Builder builder) {
+    return new DataSet(
+        false,
+        new GeographicalDescription(String.join(", ", builder.getSpatialCoverage())),
+        null,
+        null,
+        null);
+  }
 
-    private static DegreeBachelor generatePublicationInstanceForBachelorDegree(Builder builder) {
-        return new DegreeBachelor(builder.getMonographPages(), builder.getPublicationDateForPublication());
-    }
+  private static DegreeBachelor generatePublicationInstanceForBachelorDegree(Builder builder) {
+    return new DegreeBachelor(
+        builder.getMonographPages(), builder.getPublicationDateForPublication());
+  }
 
-    private static DegreeMaster generatePublicationInstanceForMasterDegree(Builder builder) {
-        return new DegreeMaster(builder.getMonographPages(), builder.getPublicationDateForPublication());
-    }
+  private static DegreeMaster generatePublicationInstanceForMasterDegree(Builder builder) {
+    return new DegreeMaster(
+        builder.getMonographPages(), builder.getPublicationDateForPublication());
+  }
 
-    private static DegreePhd generatePublicationInstanceForPhd(Builder builder) {
-        return new DegreePhd(builder.getMonographPages(), builder.getPublicationDateForPublication(),
-                             extractUnconfirmedDocuments(builder));
-    }
+  private static DegreePhd generatePublicationInstanceForPhd(Builder builder) {
+    return new DegreePhd(
+        builder.getMonographPages(),
+        builder.getPublicationDateForPublication(),
+        extractUnconfirmedDocuments(builder));
+  }
 
-    private static HashSet<RelatedDocument> extractUnconfirmedDocuments(Builder builder) {
-        var values = Optional.ofNullable(builder.getHasPart()).orElseGet(Collections::emptyList);
-        var relatedDocuments = new LinkedHashSet<RelatedDocument>();
-        for (int i = 0; i < values.size(); i++) {
-            relatedDocuments.add(new UnconfirmedDocument(values.get(i), i + 1));
-        }
-        return relatedDocuments;
+  private static HashSet<RelatedDocument> extractUnconfirmedDocuments(Builder builder) {
+    var values = Optional.ofNullable(builder.getHasPart()).orElseGet(Collections::emptyList);
+    var relatedDocuments = new LinkedHashSet<RelatedDocument>();
+    for (int i = 0; i < values.size(); i++) {
+      relatedDocuments.add(new UnconfirmedDocument(values.get(i), i + 1));
     }
+    return relatedDocuments;
+  }
 
-    private static ReportBasic generatePublicationInstanceForReport(Builder builder) {
-        return new ReportBasic(generateMonographPages(builder));
-    }
+  private static ReportBasic generatePublicationInstanceForReport(Builder builder) {
+    return new ReportBasic(generateMonographPages(builder));
+  }
 
-    private static ReportResearch generatePublicationInstanceForResearchReport(Builder builder) {
-        return new ReportResearch(generateMonographPages(builder));
-    }
+  private static ReportResearch generatePublicationInstanceForResearchReport(Builder builder) {
+    return new ReportResearch(generateMonographPages(builder));
+  }
 
-    private static Book generatePublicationContextForBook(Builder builder) throws InvalidIssnException {
-        return new Book.BookBuilder().withSeriesNumber(builder.getSeriesNumberPublication())
-                   .withIsbnList(Collections.singletonList(builder.getIsbn()))
-                   .withSeries(generateSeries(builder))
-                   .build();
-    }
+  private static Book generatePublicationContextForBook(Builder builder)
+      throws InvalidIssnException {
+    return new Book.BookBuilder()
+        .withSeriesNumber(builder.getSeriesNumberPublication())
+        .withIsbnList(Collections.singletonList(builder.getIsbn()))
+        .withSeries(generateSeries(builder))
+        .build();
+  }
 
-    private static BookMonograph generatePublicationInstanceForBook(Builder builder) {
-        var monographPages = new MonographPages.Builder().withIllustrated(false)
-                                 .withPages(builder.getPages().getPages())
-                                 .build();
-        return new NonFictionMonograph(monographPages);
-    }
+  private static BookMonograph generatePublicationInstanceForBook(Builder builder) {
+    var monographPages =
+        new MonographPages.Builder()
+            .withIllustrated(false)
+            .withPages(builder.getPages().getPages())
+            .build();
+    return new NonFictionMonograph(monographPages);
+  }
 
-    private static Degree generatePublicationContextForDegree(Builder builder)
-        throws InvalidIsbnException, InvalidUnconfirmedSeriesException, InvalidIssnException {
-        return new Degree.Builder().withIsbnList(Collections.singletonList(builder.getIsbn()))
-                   .withSeries(generateSeries(builder))
-                   .withCourse(new UnconfirmedCourse(builder.getSubjectCode())).build();
-    }
+  private static Degree generatePublicationContextForDegree(Builder builder)
+      throws InvalidIsbnException, InvalidUnconfirmedSeriesException, InvalidIssnException {
+    return new Degree.Builder()
+        .withIsbnList(Collections.singletonList(builder.getIsbn()))
+        .withSeries(generateSeries(builder))
+        .withCourse(new UnconfirmedCourse(builder.getSubjectCode()))
+        .build();
+  }
 }
